--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,3 +7,32 @@
     <li>Guards</li>
   </ul>
 </app-toolbar>
+
+<main>
+  <app-card [icon]="faInfoCircle" [title]="'Star Ratings'" [subTitle]="'Components'">
+    <app-star-ratings card-body [rating]="rating" [title]="'Rating is: ' + rating"></app-star-ratings>
+
+    <input
+      card-footer
+      type="number"
+      max="5"
+      [value]="rating"
+      (input)="ratingInputChanged($event)"
+    >
+  </app-card>
+
+  <app-card [icon]="faInfoCircle" [title]="'Progress bar'" [subTitle]="'Components'">
+    <app-progress-bar card-body [value]="progressValue"></app-progress-bar>
+
+    <button card-footer (click)="progressValue = 75;">Update</button>
+  </app-card>
+
+  <app-card [icon]="faInfoCircle" [title]="'Accordion'" [subTitle]="'Components'">
+    <app-accordion card-body [items]="accordionItems"></app-accordion>
+  </app-card>
+
+  <app-card [icon]="faInfoCircle" [title]="'Card'" [subTitle]="'Components'">
+    <p card-footer>Footer content</p>
+    <p card-body>Body content</p>
+  </app-card>
+</main>
