--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,38 +1,23 @@
 <app-toolbar [title]="'Angular Components'">
   <ul>
-    <li>Components</li>
-    <li>Directives</li>
-    <li>Services</li>
-    <li>Pipes</li>
-    <li>Guards</li>
+    <li routerLink="components" routerLinkActive="active">
+      <span>Components</span>
+    </li>
+    <li routerLink="directives" routerLinkActive="active">
+      <span>Directives</span>
+    </li>
+    <li routerLink="services" routerLinkActive="active">
+      <span>Services</span>
+    </li>
+    <li routerLink="pipes" routerLinkActive="active">
+      <span>Pipes</span>
+    </li>
+    <li routerLink="guards" routerLinkActive="active">
+      <span>Guards</span>
+    </li>
   </ul>
 </app-toolbar>
 
 <main>
-  <app-card [icon]="faInfoCircle" [title]="'Star Ratings'" [subTitle]="'Components'">
-    <app-star-ratings card-body [rating]="rating" [title]="'Rating is: ' + rating"></app-star-ratings>
-
-    <input
-      card-footer
-      type="number"
-      max="5"
-      [value]="rating"
-      (input)="ratingInputChanged($event)"
-    >
-  </app-card>
-
-  <app-card [icon]="faInfoCircle" [title]="'Progress bar'" [subTitle]="'Components'">
-    <app-progress-bar card-body [value]="progressValue"></app-progress-bar>
-
-    <button card-footer (click)="progressValue = 75;">Update</button>
-  </app-card>
-
-  <app-card [icon]="faInfoCircle" [title]="'Accordion'" [subTitle]="'Components'">
-    <app-accordion card-body [items]="accordionItems"></app-accordion>
-  </app-card>
-
-  <app-card [icon]="faInfoCircle" [title]="'Card'" [subTitle]="'Components'">
-    <p card-footer>Footer content</p>
-    <p card-body>Body content</p>
-  </app-card>
+  <router-outlet></router-outlet>
 </main>
