--- a/src/app/components/loader/loader.component.html
+++ b/src/app/components/loader/loader.component.html
@@ -1,7 +1,10 @@
 <div *ngIf="isLoading" class="loader-overlay">
   <div class="loader-container">
     <div class="loader">
-      <div class="circular"></div>
+      <ng-container [ngSwitch]="loaderType">
+        <div *ngSwitchCase="LoaderTypeEnum.CIRCULAR" class="circular"></div>
+        <h1 *ngSwitchCase="LoaderTypeEnum.LOADING" class="loading">{{ loadingText }}</h1>
+      </ng-container>
     </div>
   </div>
 </div>
