--- a/src/app/components/component-documentation/component-documentation.component.html
+++ b/src/app/components/component-documentation/component-documentation.component.html
@@ -1,3 +1,7 @@
+<app-card [icon]="faInfoCircle" [title]="'Toggle'" [subTitle]="'Components'">
+  <app-toggle card-body [isOn]="toggleValue"></app-toggle>
+</app-card>
+
 <app-card [icon]="faInfoCircle" [title]="'Modal'" [subTitle]="'Components'">
   <div card-body>
     <app-modal #modal [title]="'Modal'">
