--- a/src/app/directives/directives-documentation/directives-documentation.component.html
+++ b/src/app/directives/directives-documentation/directives-documentation.component.html
@@ -1,3 +1,9 @@
+<app-card [icon]="faInfoCircle" [title]="'Debounce Input'" [subTitle]="'Directives'">
+  <div card-body>
+    <input [appDebounceInput]="1000" type="text" (debouncedValue)="valueChanged($event)">
+  </div>
+</app-card>
+
 <app-card [icon]="faInfoCircle" [title]="'Debounce click'" [subTitle]="'Directives'">
   <div card-body>
     <button [appDebounceClick]="1000" (debounceClick)="log($event)">Log</button>
